# embedding-perf

./: .gitignore  justfile  main.py  pyproject.toml
contestants/cpp-libtorch-torchscript/: CMakeLists.txt  embeddings  main.cpp
contestants/cpp-libtorch-torchscript/output/: benchmark_results.jsonl
contestants/cpp-libtorch-ts/: embeddings  main.cpp  run-all.sh
contestants/python-fastembed/: main.py  run-all.sh
contestants/python-fastembed/output/: benchmark_results.jsonl
contestants/python-mlx-embeddings/: main.py  run-all.sh
contestants/python-onnxruntime/: main.py  run-all.sh
contestants/python-onnxruntime/output/: benchmark_results.jsonl
contestants/python-sentence-transformers/: embeddings.txt  main.py  run-all.sh
contestants/python-sentence-transformers/output/: benchmark_results.jsonl
contestants/rust-candle/: Cargo.toml  run-all.sh
contestants/rust-candle/output/: benchmark_results.jsonl
contestants/rust-candle/src/: main.rs
contestants/rust-cpp-libtorch-torchscript/: Cargo.toml  build.rs  embeddings.txt  main.cpp  run-all.sh  run-commands.sh
contestants/rust-cpp-libtorch-torchscript/cpp-wrapper/: CMakeLists.txt  embedder_wrapper.cpp  embedder_wrapper.h
contestants/rust-cpp-libtorch-torchscript/output/: benchmark_results.jsonl
contestants/rust-cpp-libtorch-torchscript/src/: main.rs
contestants/rust-cpp-libtorch-ts/: Cargo.toml  build.rs
contestants/rust-cpp-libtorch-ts/cpp-wrapper/: CMakeLists.txt  embedder_wrapper.h
contestants/rust-mlx/: Cargo.toml  main.py  run-all.sh
contestants/rust-mlx/output/: benchmark_results.jsonl
contestants/rust-mlx/src/: bert.rs  main.rs
contestants/rust-tch-rs-torchscript/: Cargo.toml
contestants/rust-tch-rs-torchscript/output/: benchmark_results.jsonl
contestants/rust-tch-rs-torchscript/src/: main.rs
contestants/rust-tch-ts/: run-all.sh
contestants/rust-tch-ts/output/: benchmark_results.jsonl
cpp-libtorch-torchscript/: main.cpp
data/: make-dataset.py  sentences.txt  tokenize-and-reference-embeddings.py  tokenize-dataset.py
data/reference-output/all-MiniLM-L6-v2/: tokenized-small.txt  tokenized.txt
data/reference-output/all-mpnet-base-v2/: tokenized.txt
data/reference-output/gte-large/: embeddings-128.txt  embeddings-256.txt  embeddings-32.txt  embeddings-64.txt
data/tokenized/: GIST-Small-Embedding-v0  all-MiniLM-L12-v2  all-MiniLM-L6-v2  all-mpnet-base-v2
generate-torchscript-models/: main.py  pyproject.toml
python-sentence-transformers/: embeddings.txt  main.py
results/: aggregate-benchmarks.py  aggregated_benchmarks.json  all_benchmarks.jsonl  backup.jsonl  benchmark_summary.txt  build.sh  evaluate-correctness.py  evaluation_results.json  index.html
website/: package.json  wrangler.jsonc
website/public/: all_benchmarks.jsonl  index.html
