[package]
name = "rust-candle"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
candle-core = { version = "0.9.1", features = ["metal", "accelerate"] }
candle-nn = { version = "0.9.1", features = ["metal", "accelerate"] }
candle-transformers = { version = "0.9.1", features = ["metal", "accelerate"] }
clap = { version = "4.5.48", features = ["derive"] }
hf-hub = "0.4.3"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokenizers = "0.22.1"
